--- a/ContactApp.Services/ContactApp.Services.csproj
+++ b/ContactApp.Services/ContactApp.Services.csproj
@@ -60,7 +60,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PreBuildEvent>nuget restore</PreBuildEvent>
+    <PreBuildEvent>$(SolutionDir).nuget\nuget.exe restore $(SolutionDir)ContactApp.sln</PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
